[project]
name = "agentic-ai-google-x-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk-community>=0.2.0",
    "google-adk[openmemory]>=1.19.0",
    "langfuse>=3.10.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pip>=25.3",
    "pymongo>=4.15.4",
]
