[project]
name = "agentic-ai-google-x-kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "chainlit>=2.9.2",
    "fastapi>=0.118.3",
    "google-adk-community>=0.2.0",
    "google-adk[openmemory]>=1.19.0",
    "langfuse>=3.10.1",
    "markdown>=3.10",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pymongo>=4.15.4",
    "uvicorn>=0.38.0",
    "weasyprint>=66.0",
]
